feat: Implement initial connections management for crypto exchanges with API, UI, and database types.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -75,7 +75,7 @@ development_status:
   epic-5: in-progress
   5-1-binance-api-sync-read-only: done
   5-2-okx-api-sync-read-only: done
-  5-3-connections-management-hub: backlog
+  5-3-connections-management-hub: review
   5-4-background-sync-polling-60s: backlog
   epic-5-retrospective: optional
 
